--- a/ssyc-mast/index.html
+++ b/ssyc-mast/index.html
@@ -50,19 +50,19 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">NFT Collections</a>
+            <a href="#" class="navbar-link">Mint SSYC NFT</a>
           </li>
 
           <li>
-            <a href="https://x.com/ssyc_sol" class="navbar-link">Twitter</a>
+            <a href="https://x.com/ssyc_solana" class="navbar-link">Twitter</a>
           </li>
 
           <li>
-            <a href="https://t.me/ssyc_sol" class="navbar-link">Telegram</a>
+            <a href="https://t.me/ssyc_solana" class="navbar-link">Telegram</a>
           </li>
 
                    <li>
-            <a href="#" class="navbar-link">SSYC Token</a>
+            <a href="#" class="navbar-link">Buy $SSYC</a>
           </li>
 
         </ul>
