--- a/ssyc-mast/index.html
+++ b/ssyc-mast/index.html
@@ -53,12 +53,8 @@
             <a href="#" class="navbar-link">Mint SSYC NFT</a>
           </li>
 
-          <li>
-            <a href="https://x.com/ssyc_solana" class="navbar-link">Twitter</a>
-          </li>
-
-          <li>
-            <a href="https://t.me/ssyc_solana" class="navbar-link">Telegram</a>
+                  <li>
+            <a href="https://t.me/ssyc_solana" class="navbar-link">Telegram Comm.</a>
           </li>
 
                    <li>
